import java.nio.file.Files
import java.nio.file.NoSuchFileException
import java.nio.file.Paths
import java.time.LocalDateTime

/*
 * Copyright 2016 E-System LLC
 *
 *    Licensed under the Apache License, Version 2.0 (the "License");
 *    you may not use this file except in compliance with the License.
 *    You may obtain a copy of the License at
 *
 *        http://www.apache.org/licenses/LICENSE-2.0
 *
 *    Unless required by applicable law or agreed to in writing, software
 *    distributed under the License is distributed on an "AS IS" BASIS,
 *    WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 *    See the License for the specific language governing permissions and
 *    limitations under the License.
 */
buildscript {
    configurations.all {
        resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
    }
    repositories {
        maven {
            url "https://plugins.gradle.org/m2/"
        }
    }
    dependencies {
        classpath "org.sonarsource.scanner.gradle:sonarqube-gradle-plugin:4.0.0.2929"
    }
}
plugins {
    id "com.github.ben-manes.versions" version "0.44.0"
}
wrapper {
    gradleVersion = '9.4.1'
}

def resolve(String name) {
    return (findProperty(name) ?: System.getenv(name))
}

apply from: "build-${resolve('profile')}.gradle"
apply plugin: 'idea'
apply plugin: 'java'
apply plugin: 'java-library'
apply plugin: 'groovy'
apply plugin: 'maven-publish'
apply plugin: 'jacoco'

configurations.all {
    resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
}

if (JavaVersion.current() != JavaVersion.VERSION_1_8) {
    [compileJava, compileTestJava, compileTestGroovy, compileGroovy]*.sourceCompatibility = JavaVersion.VERSION_1_8
    [compileJava, compileTestJava, compileTestGroovy, compileGroovy]*.targetCompatibility = JavaVersion.VERSION_1_8
    [compileJava, compileTestJava, compileTestGroovy, compileGroovy]*.options*.release = 8
}
[compileJava, compileTestJava, compileTestGroovy, compileGroovy]*.options*.encoding = 'UTF-8'

group = ext.mainGroup
version = ext.mainVersion + (ext.snapshot ? '-SNAPSHOT' : '')

repositories {
    mavenCentral()
    maven {
        url = uri("${resolve("repos_url")}/${((rootProject.ext.snapshot) ? "snapshots" : "releases")}")
        credentials {
            username "${resolve('repos_user')}"
            password "${resolve('repos_password')}"
        }
    }
    mavenLocal()
}

def propName = rootProject.name
def fullPath = '/com/es/lib/entity'
if (!fullPath.startsWith('/src/main/resources')) {
    fullPath = '/src/main/resources' + fullPath
}
def versionString = "${project.version}"
def filePath = "${project.projectDir}${fullPath}/"
new File(filePath).mkdirs()
try {
    Files.delete(Paths.get(filePath, 'build.properties'))
} catch (NoSuchFileException ignore) {
}
println("Create file for property: ${filePath}")
project.ant.propertyfile(file: "${filePath}build.properties") {
    ant.entry(key: 'name', value: propName)
    ant.entry(key: 'version', value: versionString)
    ant.entry(key: 'date', value: "${LocalDateTime.now().toString()}")
}

jar {
    manifest {
        attributes(
            'Implementation-Version': project.version,
            'Implementation-Vendor': 'E-SYSTEM'
        )
    }
}
javadoc {
    failOnError = false
    options.encoding = 'utf-8'
}
java {
    withSourcesJar()
    withJavadocJar()
}
publishing {
    repositories {
        maven {
            url = uri("${resolve("repos_url")}/${((rootProject.ext.snapshot) ? "snapshots" : "releases")}")
            credentials {
                username = resolve("repos_user")
                password = resolve("repos_password")
            }
        }
    }
    publications {
        mavenJava(MavenPublication) {
            from components.java
        }
    }
}
ext{
    pgVersion = "42.5.1"
    hibernateVersion = "5.6.14.Final"
    lombokVersion = "1.18.24"
    jacksonVersion = "2.14.1"
    testcontainersVersion = "1.17.6"
}
dependencies {
    api "com.es.lib:common-lib:1.5.0${project.ext.snapshot ? '-SNAPSHOT' : ''}"

    api "org.hibernate:hibernate-entitymanager:${hibernateVersion}"
    api "org.hibernate:hibernate-core:${hibernateVersion}"

    compileOnly "org.postgresql:postgresql:${pgVersion}"

    compileOnly "org.projectlombok:lombok:${lombokVersion}"
    annotationProcessor "org.projectlombok:lombok:${lombokVersion}"

    testRuntimeOnly "org.junit.platform:junit-platform-launcher"

    testImplementation "org.spockframework:spock-core:2.3-groovy-4.0"
    testImplementation "com.fasterxml.jackson.datatype:jackson-datatype-jsr310:${jacksonVersion}"
    testImplementation "org.testcontainers:spock:${testcontainersVersion}"
    testImplementation "org.testcontainers:postgresql:${testcontainersVersion}"
    testImplementation "org.postgresql:postgresql:${pgVersion}"
}

test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
    jvmArgs("--add-opens", "java.base/java.lang=ALL-UNNAMED")
}

def sonarAvailable = resolve('sonar_url') != null && resolve('sonar_user') != null && resolve('sonar_password') != null
if (sonarAvailable) {
    apply plugin: 'org.sonarqube'
    sonarqube {
        properties {
            property "sonar.host.url", resolve('sonar_url')
            property "sonar.login", resolve('sonar_user')
            property "sonar.password", resolve('sonar_password')
        }
    }
}